setting up the nav bar and page layout

--- a/blog/views/layouts/main.handlebars
+++ b/blog/views/layouts/main.handlebars
@@ -12,6 +12,9 @@
         <a href="#">Dashboard</a>
         <a href="#">Login</a>
     </nav>
+    <div>
+        Title
+    </div>
     {{{body}}}
 </body>
 </html>
